// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItem data sources gets a cursor finding sibling content items of a provided item 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20undefined%29%29%20or%20%28%28ContentChannelItemId%20eq%20undefined%29%29",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItem data sources gets a cursor finding sibling content items of a provided item 2`] = `Array []`;

exports[`ContentItem data sources gets scripture references 1`] = `
Array [
  Array [
    "john 1:1, 10:10",
  ],
]
`;

exports[`ContentItem data sources gets sermon notes 1`] = `
Array [
  Object {
    "__typename": "NotesTextBlock",
    "allowsComment": false,
    "comment": null,
    "hasBlanks": false,
    "hiddenText": null,
    "id": "NotesTextBlock:559b23fd0aa90e81b1c023e72e230fa1",
    "isHeader": true,
    "simpleText": "1. this is point one",
  },
  Object {
    "__typename": "NotesTextBlock",
    "allowsComment": true,
    "comment": null,
    "hasBlanks": false,
    "hiddenText": null,
    "id": "NotesTextBlock:965b6e6d7046a885bea4e300b5c0400d",
    "isHeader": false,
    "simpleText": "this is a subpoint",
  },
  Object {
    "__typename": "NotesScriptureBlock",
    "allowsComment": true,
    "comment": null,
    "id": "NotesScriptureBlock:4f68015ba18662a7409d1219a4ce013e",
    "scripture": Object {
      "content": "<p>verse<p>",
      "reference": "Genesis 1:1",
    },
    "simpleText": "verse Genesis 1:1",
  },
]
`;

exports[`ContentItem data sources gets sermon notes comments 1`] = `
Object {
  "NotesScriptureBlock:123": Object {
    "id": "NotesBlockComment:965b6e6d7046a885bea4e300b5c0400d",
    "text": "this is another comment",
  },
  "NotesTextBlock:123": Object {
    "id": "NotesBlockComment:559b23fd0aa90e81b1c023e72e230fa1",
    "text": "this is a comment",
  },
}
`;

exports[`ContentItem data sources returns an empty array when there are no sibling content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;
